#6 Adds package to parse csv files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies" : {
     "inquirer": "~5.2.*",
     "mysql": "~2.15.*",
-    "dotenv": "~5.*"
+    "dotenv": "~5.*",
+    "csv-parse": "~2.2"
   },
   "repository": {
     "type": "git",
